@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-06-08T08:30:17Z",
+  "timestamp" : "2022-06-09T01:58:07Z",
   "count_outdated" : 504,
   "uniques_outdated" : 284,
-  "count" : 624,
+  "count" : 625,
   "uniques" : 323,
   "clones" : [
     {
@@ -77,8 +77,8 @@
     },
     {
       "timestamp": "2022-06-08T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
